# currency-exchange-api

./: Dockerfile  README.md  api_entrypoint.sh  docker-compose.yml  manage.py  pyproject.toml  unversioned-requirements.txt
api/src/: README.md  pyproject.toml  unversioned-requirements.txt
api/src/api_key/: authentication.py  models.py
api/src/api_key/management/commands/: apikey.py
api/src/api_key/migrations/: 0001_initial.py
api/src/api_key/tests/: test_api_key_model.py  test_urls_permissions.py
api/src/conversion/: admin.py  apscheduler.py  converter.py  tasks.py
api/src/conversion/api/: serializers.py  urls.py  views.py
api/src/conversion_client/: admin.py  apps.py  conversion_client.py  django_client.py  exceptions.py  models.py
api/src/conversion_client/api/: serializers.py  urls.py  views.py
api/src/conversion_client/migrations/: 0001_initial.py
api/src/core/: api_urls.py  asgi.py  exceptions.py  settings.py  urls.py  wsgi.py
api/src/core/management/commands/: run-jobs.py
api/src/core/tests/: tests_settings.py
api/src/currency/: admin.py  apps.py
api/src/currency/api/: serializers.py  urls.py  views.py
api/src/currency/migrations/: 0001_initial.py
api/src/locale/en/LC_MESSAGES/: django.mo  django.po
api/src/locale/es/LC_MESSAGES/: django.mo  django.po
backend-djangorest/api/src/: api_entrypoint.sh  manage.py  pyproject.toml  requirements.txt  unversioned-requirements.txt
backend-djangorest/api/src/api_key/: apps.py  authentication.py  models.py  permissions.py
backend-djangorest/api/src/api_key/migrations/: 0001_initial.py
backend-djangorest/api/src/api_key/tests/: test_api_key_model.py  test_urls_permissions.py
backend-djangorest/api/src/conversion/: apps.py  apscheduler.py  converter.py  cron.py  exceptions.py  models.py  tasks.py
backend-djangorest/api/src/conversion/api/: serializers.py  (+2 more)
backend-djangorest/api/src/core/: admin.py  api_urls.py  asgi.py  exceptions.py  settings.py  urls.py  wsgi.py
backend-djangorest/api/src/currency/: admin.py  apps.py
(+97 files in other folders)
