[tool.poetry]
name = "currency-conversion-api"
version = "1.1.8"
description = ""
authors = ["fabbo-repo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
djangorestframework = "^3.14.0"
django-environ = "^0.11.2"
django-configurations = "^2.5"
django-apscheduler = "^0.6.2"
django-filter = "^23.5"
django-cors-headers = "^4.3.1"
drf-yasg = "^1.21.7"
psycopg2-binary = "^2.9.9"
coverage = "^7.3.4"
gunicorn = "^21.2.0"
selenium = "^4.16.0"
webdriver-manager = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
